--- a/src/app/shared/components/countdown-timer/countdown-timer.component.html
+++ b/src/app/shared/components/countdown-timer/countdown-timer.component.html
@@ -1,30 +1,31 @@
-<mat-divider></mat-divider>
+
 <div class="container">
   <div class="countdown d-flex justify-content-center">
-    
-  <div class="col-md-12">
-<div class="sale_title text-center">
+    <div class="col-md-4">
+      <div class="sale_title text-center">
         <h2 class="mb-0">Todays</h2>
-    <h1>Flash Sales</h1>
-</div>
-    <div class="flash-sale-timer">
-      <div class="timer-value">
-        <span>{{ days }}</span>
-        <span class="dot">:</span>
-        <span>{{ hours }}</span>
-        <span class="dot">:</span>
-        <span>{{ minutes }}</span>
-        <span class="dot">:</span>
-        <span>{{ seconds }}</span>
+        <h1>Flash Sales</h1>
       </div>
-      <div class="timer-labels">
-        <span>Days</span>
-        <span>Hours</span>
-        <span>Minutes</span>
-        <span>Seconds</span>
+    </div>
+    <div class="col-md-8">
+      <div class="flash-sale-timer">
+        <div class="timer-labels mb-2">
+          <span>Days</span>
+          <span>Hours</span>
+          <span>Minutes</span>
+          <span>Seconds</span>
+        </div>
+        <div class="timer-value">
+          <span>{{ days }}</span>
+          <span class="dot">:</span>
+          <span>{{ hours }}</span>
+          <span class="dot">:</span>
+          <span>{{ minutes }}</span>
+          <span class="dot">:</span>
+          <span>{{ seconds }}</span>
+        </div>
       </div>
     </div>
   </div>
 </div>
-</div>
-<mat-divider></mat-divider>
+
