--- a/src/app/shared/components/countdown-timer/countdown-timer.component.html
+++ b/src/app/shared/components/countdown-timer/countdown-timer.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="countdown d-flex justify-content-center">
     <div class="col-md-4">
-      <div class="sale_title text-center">
+      <div class="sale_title ">
         <h2 class="mb-0">Todays</h2>
         <h1>Flash Sales</h1>
       </div>
