--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -39,10 +39,19 @@
     </div>
   </div> -->
   <mat-divider></mat-divider>
+
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <app-card-slider></app-card-slider>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <app-categories></app-categories>
       </div>
     </div>
   </div>
