--- a/src/app/shared/components/best-selling/best-selling.component.scss
+++ b/src/app/shared/components/best-selling/best-selling.component.scss
@@ -1,14 +1,3 @@
-.catagory_dash{
-    h1{
-        font-size:30px;
-        font-weight: bold;
-    }
-    h2{
-        color: #e04b47;
-    }
-}
-
-
 .category-container {
   // display: flex;
   // gap: 16px;
@@ -21,7 +10,7 @@
     align-items: center;
     padding: auto;
     width: 100%;
-    height: 150px;
+    // height: 150px;
     cursor: pointer;
     border-radius: 8px;
     box-shadow: none;
@@ -86,4 +75,14 @@
   width: 100%;
   gap: 1rem;
   padding: 1rem;
+}
+
+.best_selling_dash{
+    h2{
+        color: #e04b47;
+    }
+    h1{
+        font-size: 30px;
+        font-weight: bold;
+    }
 }
