--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -48,13 +48,23 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container ">
     <div class="row">
       <div class="col-md-12">
         <app-categories></app-categories>
       </div>
     </div>
   </div>
+
+
+   <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <app-best-selling></app-best-selling>
+      </div>
+    </div>
+  </div>
+
 
   <app-footer></app-footer>
 </div>
