--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-offer-bar></app-offer-bar>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<div class="loader" id="loader" *ngIf="isloadersatrt">
+    <mat-spinner></mat-spinner>
+</div>
 <!-- 
 <app-auth></app-auth> -->
+    
